Fix portfolio images responsive design

--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,8 @@ header nav .form i {
 .portfolio .imgs-container .box {
   overflow: hidden;
   position: relative;
+   flex: 1 1 250px; 
+   max-height: 250px;
 }
 .portfolio .imgs-container .box:hover .caption {
   bottom: 0;
@@ -399,6 +401,7 @@ header nav .form i {
 @media (min-width: 768px) {
   .portfolio .imgs-container .box {
     flex-basis: 50%;
+    
   }
 }
 @media (min-width: 1199px) {
@@ -406,9 +409,15 @@ header nav .form i {
     flex-basis: 25%;
   }
 }
+@media (min-width: 1200px) {
+  .portfolio .imgs-container .box img {
+    max-height: 300px; }
+}
 .portfolio .imgs-container .box img {
-  max-width: 100%;
+  width: 100%;
   height: 100%;
+  object-fit: cover; /* يخلي الصور مقصوصة متناسقة */
+  display: block;
   transition: 0.3s;
 }
 .portfolio .imgs-container .box .caption {
